--- a/SchoolDiarySystem/Views/Student/Details.cshtml
+++ b/SchoolDiarySystem/Views/Student/Details.cshtml
@@ -24,16 +24,16 @@
                     </div>
                 </div>
                 <div class="single-info-details">
-                    <div class="item-img">
+                    @*<div class="item-img">
                         @if (Model.Gender != "Male")
                         {
-                            <img src="~/Content/img/figure/user2.jpg" alt="teacher">
+                            <img src="~/Content/img/figure/user3.jpg" alt="student">
                         }
                         else
                         {
-                            <img src="~/Content/img/figure/teacher.jpg" alt="teacher">
+                            <img src="~/Content/img/figure/user2.jpg" alt="student">
                         }
-                    </div>
+                    </div>*@
                     <div class="item-content">
                         <div class="header-inline item-header">
                             <h3 class="text-dark-medium font-medium">@Html.Label("FullName", Model.FullName, new { @class = "text-dark-medium font-medium" })</h3>
