--- a/SchoolDiarySystem/Views/Account/Login.cshtml
+++ b/SchoolDiarySystem/Views/Account/Login.cshtml
@@ -49,7 +49,7 @@
                 @using (Html.BeginForm("Login", "Account", FormMethod.Post))
                 {
                     <div class="item-logo">
-                        <img src="~/Content/img/logo2.png" alt="logo">
+                        <img src="~/Content/img/favicon.png" alt="logo">
                     </div>
                     <form class="login-form">
                         @Html.ValidationSummary(true, string.Empty, new { @class = "text-danger" })
