--- a/SchoolDiarySystem/Views/Parent/Details.cshtml
+++ b/SchoolDiarySystem/Views/Parent/Details.cshtml
@@ -24,9 +24,9 @@
                     </div>
                 </div>
                 <div class="single-info-details">
-                    <div class="item-img">
+                    @*<div class="item-img">
                         <img src="~/Content/img/figure/user5.jpg" alt="parent">
-                    </div>
+                    </div>*@
                     <div class="item-content">
                         <div class="header-inline item-header">
                             <h3 class="text-dark-medium font-medium">@Html.Label("FullName", Model.FullName, new { @class = "text-dark-medium font-medium" })</h3>
@@ -57,11 +57,11 @@
                                             </a>
                                         </td>
                                         <td>
-                                            <a href="@Url.Action("Delete", "Parent", routeValues: new { id = Model.ParentID })">
+                                            @*<a href="@Url.Action("Delete", "Parent", routeValues: new { id = Model.ParentID })">
                                                 <div class="col-12 form-group mg-t-8">
                                                     <input type="submit" value="Delete" class="btn-fill-md radius-4 text-light bg-orange-red" />
                                                 </div>
-                                            </a>
+                                            </a>*@
                                         </td>
                                         <td>
                                             <a href="@Url.Action("Index", "Parent")">
