--- a/SchoolDiarySystem/Views/Shared/_LayoutTeacher.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutTeacher.cshtml
@@ -50,8 +50,8 @@
         <div class="navbar navbar-expand-md header-menu-one bg-light">
             <div class="nav-bar-header-one">
                 <div class="header-logo">
-                    <a href="index-2.html">
-                        <img src="~/Content/img/logo.png" alt="logo">
+                    <a href="@Url.Action("Index", "Professor")">
+                        <img src="~/Content/img/favicon.png" alt="logo">
                     </a>
                 </div>
                 <div class="toggle-button sidebar-toggle">
