--- a/SchoolDiarySystem/Views/Student/Create.cshtml
+++ b/SchoolDiarySystem/Views/Student/Create.cshtml
@@ -30,7 +30,7 @@
                 <div class="row">
                     <div class="col-xl-3 col-lg-6 col-12 form-group">
                         <label>First Name *</label>
-                        @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First name...", id = "firstname", autocomplete = "off" })
+                        @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First name...", id = "firstname", @autocomplete = "off" })
                         @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
                     </div>
                     <div class="col-xl-3 col-lg-6 col-12 form-group">
@@ -41,7 +41,7 @@
                     <div class="col-xl-3 col-lg-6 col-12 form-group">
                         <label>Gender *</label>
                         @Html.DropDownListFor(m => m.Gender, Model.Genders, new { @class = "select2" })
-                        @Html.ValidationMessageFor(m => m.Gender, "", new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(m => m.Gender)@*, "", new { @class = "text-danger" }*@
                     </div>
                     <div class="col-xl-3 col-lg-6 col-12 form-group">
                         <label>Date Of Birth *</label>
