--- a/SchoolDiarySystem/Views/Teacher/Delete.cshtml
+++ b/SchoolDiarySystem/Views/Teacher/Delete.cshtml
@@ -21,11 +21,19 @@
                 <div class="heading-layout1">
                     <div class="item-title">
                         <h3>Are you sure you want to delete this teacher?</h3>
+                        <br />
                     </div>
                 </div>
                 <div class="single-info-details">
                     <div class="item-img">
-                        <img src="~/Content/img/figure/teacher.jpg" alt="teacher">
+                        @if (Model.Gender != "Male")
+                        {
+                            <img src="~/Content/img/figure/student1.jpg" alt="teacher">
+                        }
+                        else
+                        {
+                            <img src="~/Content/img/figure/teacher.jpg" alt="teacher">
+                        }
                     </div>
                     <div class="item-content">
                         <div class="header-inline item-header">
