Changes in Database

--- a/SchoolDiarySystem/Views/Admin/Index.cshtml
+++ b/SchoolDiarySystem/Views/Admin/Index.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<div class="dashboard-page-one">
+@*<div class="dashboard-page-one">*@
     <div class="dashboard-content-one">
         <div class="breadcrumbs-area">
             <h3>Admin Dashboard</h3>
@@ -108,6 +108,6 @@
             </div>
         </div>
     </div>
-</div>
+@*</div>*@
 
 @section Scripts {}
