--- a/SchoolDiarySystem/Views/Shared/_LayoutAdmin.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutAdmin.cshtml
@@ -114,7 +114,7 @@
                 </ul>
             </div>
         </div>
-        <!-- Header Menu Area End Here -->
+        <!-- Header Menu Area End Here  style="height: 100%; position: absolute;" -->
         <!-- Page Area Start Here -->
         <div class="dashboard-page-one">
             <!-- Sidebar Area Start Here -->
