--- a/SchoolDiarySystem/Views/Class/Create.cshtml
+++ b/SchoolDiarySystem/Views/Class/Create.cshtml
@@ -26,8 +26,6 @@
                 </div>
                 @using (Html.BeginForm("Create", "Class", FormMethod.Post))
                 {
-                    @Html.AntiForgeryToken()
-
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <form class="new-added-form">
                         <div class="row">
@@ -39,7 +37,7 @@
                             <div class="col-xl-4 col-lg-6 col-12 form-group">
                                 <label>Class Number *</label>
                                 @Html.TextBoxFor(m => m.ClassNo, new { @class = "form-control", @placeholder = "Write class number...", @type = "number", @maxlength = 1, autocomplete = "off" })
-                                @Html.ValidationMessageFor(m => m.ClassNo)
+                                @Html.ValidationMessageFor(m => m.ClassNo, "", new { @class = "text-danger" })
                             </div>
                             <div class="col-xl-4 col-lg-6 col-12 form-group">
                                 <label>Room Type *</label>
