--- a/SchoolDiarySystem/Views/Review/Details.cshtml
+++ b/SchoolDiarySystem/Views/Review/Details.cshtml
@@ -50,9 +50,16 @@
                                             </a>
                                         </td>
                                         <td>
+                                            <a href="@Url.Action("CommentList", "Review")">
+                                                <div class="col-12 form-group mg-t-8">
+                                                    <input type="submit" value="Back to Comments List" class="btn-fill-md text-light bg-orange-peel" />
+                                                </div>
+                                            </a>
+                                        </td>
+                                        <td>
                                             <a href="@Url.Action("Index", "Review")">
                                                 <div class="col-12 form-group mg-t-8">
-                                                    <input type="submit" value="Back to List" class="btn-fill-md text-light bg-orange-peel" />
+                                                    <input type="submit" value="Back to Reviews List" class="btn-fill-md text-light bg-orange-peel" />
                                                 </div>
                                             </a>
                                         </td>
