--- a/SchoolDiarySystem/Views/Shared/_LayoutDirector.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutDirector.cshtml
@@ -136,7 +136,10 @@
                             <a href="@Url.Action("Index", "Absence")" class="nav-link"><i class="flaticon-calendar"></i><span>Absences</span></a>
                         </li>
                         <li class="nav-item">
-                            <a href="@Url.Action("CommentList", "Review")" class="nav-link"><i class="flaticon-dashboard"></i><span>Comments</span></a>
+                            <a href="@Url.Action("CommentList", "Review")" class="nav-link"><i class="flaticon-script"></i><span>Comments</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="@Url.Action("Index", "Review")" class="nav-link"><i class="flaticon-checklist"></i><span>Comments Reviewed</span></a>
                         </li>
                     </ul>
                 </div>
