--- a/SchoolDiarySystem/Views/Shared/_LayoutParent.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutParent.cshtml
@@ -130,22 +130,19 @@
                             <a href="@Url.Action("Index", "MyKids")" class="nav-link"><i class="flaticon-dashboard"></i><span>Dashboard</span></a>
                         </li>
                         <li class="nav-item">
-                            <a href="@Url.Action("Index", "Student")" class="nav-link"><i class="flaticon-dashboard"></i><span>My Kids</span></a>
+                            <a href="@Url.Action("IndexTopic", "MyKids")" class="nav-link"><i class="flaticon-chat"></i><span>Topics</span></a>
                         </li>
                         <li class="nav-item">
-                            <a href="@Url.Action("Index", "Topic")" class="nav-link"><i class="flaticon-dashboard"></i><span>Topics</span></a>
+                            <a href="@Url.Action("IndexAbsence", "MyKids")" class="nav-link"><i class="flaticon-shopping-list"></i><span>Absences</span></a>
                         </li>
                         <li class="nav-item">
-                            <a href="@Url.Action("Index", "Absence")" class="nav-link"><i class="flaticon-dashboard"></i><span>Absences</span></a>
+                            <a href="@Url.Action("IndexComment", "MyKids")" class="nav-link"><i class="flaticon-script"></i><span>Comments</span></a>
                         </li>
                         <li class="nav-item">
-                            <a href="@Url.Action("Index", "Comment")" class="nav-link"><i class="flaticon-dashboard"></i><span>Comments</span></a>
+                            <a href="@Url.Action("IndexClass", "MyKids")" class="nav-link"><i class="flaticon-maths-class-materials-cross-of-a-pencil-and-a-ruler"></i><span>Class</span></a>
                         </li>
                         <li class="nav-item">
-                            <a href="@Url.Action("Index", "Class")" class="nav-link"><i class="flaticon-dashboard"></i><span>Class</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="@Url.Action("Index", "Schedule")" class="nav-link"><i class="flaticon-dashboard"></i><span>Schedule</span></a>
+                            <a href="@Url.Action("IndexSchedule", "MyKids")" class="nav-link"><i class="flaticon-calendar"></i><span>Schedule</span></a>
                         </li>
                     </ul>
                 </div>
