--- a/SchoolDiarySystem/Views/Comment/Index.cshtml
+++ b/SchoolDiarySystem/Views/Comment/Index.cshtml
@@ -32,9 +32,7 @@
                 </div>
             </div>
         </div>
-        <!-- Breadcubs Area End Here -->
         <div class="row">
-            <!-- All Notice Area Start Here -->
             <div class="col-8-xxxl col-12">
                 <div class="card height-auto">
                     <div class="card-body">
@@ -66,10 +64,9 @@
                                 <div class="post-date bg-skyblue">@Html.DisplayFor(m => item.CommentDate)</div>
                                 @if (item.Review.ReviewID != 0)
                                 {
-                                    @*@Url.Action("Details", "Review", new { id = item.CommentID })*@
-                                    <a href="#">
+                                    <a href="@Url.Action("Details", "Review", new { id = item.CommentID })">
                                         <div class="post-date bg-pink">
-                                            Reviewed
+                                            Reviewed on @Html.DisplayFor(m => item.Review.ReviewDate)
                                         </div>
                                     </a>
                                 }
