--- a/SchoolDiarySystem/Views/Class/Index.cshtml
+++ b/SchoolDiarySystem/Views/Class/Index.cshtml
@@ -88,9 +88,34 @@
                                                 <span class="flaticon-more-button-of-three-dots"></span>
                                             </a>
                                             <div class="dropdown-menu dropdown-menu-right">
-                                                <a class="dropdown-item" href="@Url.Action("Delete", "Class", new { id = item.ClassID })"><i class="fas fa-times text-orange-red"></i>Delete</a>
+                                                <a class="dropdown-item modal-trigger" data-toggle="modal" data-target="#standard-modal"><i class="fas fa-times text-orange-red"></i>Delete</a>
                                                 <a class="dropdown-item" href="@Url.Action("Update", "Class", new { id = item.ClassID })"><i class="fas fa-cogs text-dark-pastel-green"></i>Update</a>
-                                                <a class="dropdown-item" href="@Url.Action("Details", "Class", new { id = item.ClassID })"><i class="fas fa-redo-alt text-orange-peel"></i>Details</a>
+                                                @*<a class="dropdown-item" href="@Url.Action("Details", "Class", new { id = item.ClassID })"><i class="fas fa-redo-alt text-orange-peel"></i>Details</a>*@
+                                            </div>
+                                            <div class="modal-box">
+                                                <!-- Modal -->
+                                                <div class="modal fade" id="standard-modal" tabindex="-1" role="dialog" aria-hidden="true" style="display: none;">
+                                                    <div class="modal-dialog" role="document">
+                                                        <div class="modal-content">
+                                                            <div class="modal-header">
+                                                                <h5 class="modal-title">Sure?</h5>
+                                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                                    <span aria-hidden="true">×</span>
+                                                                </button>
+                                                            </div>
+                                                            <div class="modal-body">
+                                                                Are you sure you want to delete this class?
+                                                            </div>
+                                                            <div class="modal-footer">
+                                                                <button type="button" class="footer-btn bg-dark-low" data-dismiss="modal">No</button>
+                                                                @using (Html.BeginForm("Delete", "Class", new { id = item.ClassID }, FormMethod.Post))
+                                                                {
+                                                                    <input type="submit" value="Yes" class="footer-btn bg-linkedin" />
+                                                                }
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </td>
