--- a/SchoolDiarySystem/Views/Class/Create.cshtml
+++ b/SchoolDiarySystem/Views/Class/Create.cshtml
@@ -26,7 +26,7 @@
                 </div>
                 @using (Html.BeginForm("Create", "Class", FormMethod.Post))
                 {
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    @Html.ValidationSummary(true, "", new { @class = "alert alert-danger" })
                     <form class="new-added-form">
                         <div class="row">
                             <div class="col-xl-4 col-lg-6 col-12 form-group">
