--- a/SchoolDiarySystem/Views/Class/Update.cshtml
+++ b/SchoolDiarySystem/Views/Class/Update.cshtml
@@ -25,8 +25,8 @@
                 </div>
                 @using (Html.BeginForm("Update", "Class", FormMethod.Post))
                 {
+                    @Html.ValidationSummary(true, "", new { @class = "alert alert-danger" })
                     <form class="new-added-form">
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="row">
                             @Html.HiddenFor(m => m.ClassID)
                             <div class="col-xl-4 col-lg-6 col-12 form-group">
@@ -34,11 +34,6 @@
                                 @Html.DropDownListFor(m => m.TeacherID, new SelectList(ViewBag.Teacher, "TeacherID", "FullName"), htmlAttributes: new { @class = "select2" })
                                 @Html.ValidationMessageFor(m => m.TeacherID, "", new { @class = "text-danger" })
                             </div>
-                            @*<div class="col-xl-4 col-lg-6 col-12 form-group">
-                                <label>Class Number *</label>
-                                @Html.TextBoxFor(m => m.ClassNo, new { @class = "form-control", placeholder = "Write class number...", id = "classNo", @readonly = "true", autocomplete = "off" })
-                                @Html.ValidationMessageFor(m => m.ClassNo)
-                            </div>*@
                             <div class="col-xl-4 col-lg-6 col-12 form-group">
                                 <label>Room Type *</label>
                                 @Html.DropDownListFor(m => m.RoomID, new SelectList(ViewBag.Room, "RoomID", "RoomType"), htmlAttributes: new { @class = "select2" })
