--- a/SchoolDiarySystem/Views/Comment/Update.cshtml
+++ b/SchoolDiarySystem/Views/Comment/Update.cshtml
@@ -24,8 +24,8 @@
                 </div>
                 @using (Html.BeginForm("Update", "Comment", FormMethod.Post))
                 {
+                    @Html.ValidationSummary(true, "", new { @class = "alert alert-danger" })
                     <form class="new-added-form">
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="row">
                             @Html.HiddenFor(m => m.CommentID)
                             <div class="col-xl-4 col-lg-6 col-12 form-group">
