--- a/SchoolDiarySystem/Views/Teacher/Update.cshtml
+++ b/SchoolDiarySystem/Views/Teacher/Update.cshtml
@@ -25,8 +25,8 @@
                 </div>
                 @using (Html.BeginForm("Update", "Teacher", FormMethod.Post))
                 {
+                    @Html.ValidationSummary(true, "", new { @class = "alert alert-danger" })
                     <form class="new-added-form">
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="row">
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 @Html.HiddenFor(m => m.TeacherID)
