--- a/SchoolDiarySystem/Views/Topic/Index.cshtml
+++ b/SchoolDiarySystem/Views/Topic/Index.cshtml
@@ -64,15 +64,42 @@
                         <div class="notice-board-wrap">
                             @foreach (var item in Model)
                             {
-                                <div class="notice-list">
-                                    <div class="post-date bg-skyblue">@Html.DisplayFor(m => item.TopicDate)</div>
-                                    <h6 class="notice-title">
-                                        <a href="@Url.Action("Details", "Topic", new { id = item.TopicID })">
-                                            @Html.DisplayFor(m => item.Content)
-                                        </a>
-                                    </h6>
-                                    <div class="entry-meta">@Html.DisplayFor(m => item.Subject.SubjectTitle) | Class Time: @Html.DisplayFor(m => item.Time) / <span>Class: @Html.DisplayFor(m => item.Class.ClassNo)</span></div>
+                            <div class="notice-list">
+                                <div class="post-date bg-skyblue">@Html.DisplayFor(m => item.TopicDate)</div>
+                                <input class="post-date bg-red" type="button" data-toggle="modal" data-target="#standard-modal" value="Delete" />
+                                <h6 class="notice-title">
+                                    <a href="@Url.Action("Details", "Topic", new { id = item.TopicID })">
+                                        @Html.DisplayFor(m => item.Content)
+                                    </a>
+                                </h6>
+                                <div class="entry-meta">@Html.DisplayFor(m => item.Subject.SubjectTitle) | Class Time: @Html.DisplayFor(m => item.Time) / <span>Class: @Html.DisplayFor(m => item.Class.ClassNo)</span></div>
+
+                                <div class="modal-box">
+                                    <!-- Modal -->
+                                    <div class="modal fade" id="standard-modal" tabindex="-1" role="dialog" aria-hidden="true" style="display: none;">
+                                        <div class="modal-dialog" role="document">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title">Sure?</h5>
+                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                        <span aria-hidden="true">×</span>
+                                                    </button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    Are you sure you want to delete this topic?
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="footer-btn bg-dark-low" data-dismiss="modal">No</button>
+                                                    @using (Html.BeginForm("Delete", "Topic", new { id = item.TopicID }, FormMethod.Post))
+                                                    {
+                                                        <input type="submit" value="Yes" class="footer-btn bg-linkedin" />
+                                                    }
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
+                            </div>
                             }
                         </div>
                     </div>
