--- a/SchoolDiarySystem/Views/Topic/Update.cshtml
+++ b/SchoolDiarySystem/Views/Topic/Update.cshtml
@@ -25,8 +25,8 @@
                 </div>
                 @using (Html.BeginForm("Update", "Topic", FormMethod.Post))
                 {
+                    @Html.ValidationSummary(true, "", new { @class = "alert alert-danger" })
                     <form class="new-added-form">
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="row">
                             @Html.HiddenFor(m => m.TopicID)
                             <div class="col-xl-4 col-lg-6 col-12 form-group">
